// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Component renders checked 1`] = `
<div>
  <label
    class="sc-bczRLJ gPSiSF"
  >
    <input
      checked=""
      type="radio"
    />
    <span
      class="sc-bczRLJ glHlOs"
    />
    Monday
  </label>
</div>
`;

exports[`Radio Component renders correctly 1`] = `
<div>
  <label
    class="sc-bczRLJ gPSiSF"
  >
    <input
      type="radio"
    />
    <span
      class="sc-bczRLJ ffCwup"
    />
    Monday
  </label>
</div>
`;

exports[`Radio Component renders disabled 1`] = `
<div>
  <label
    class="sc-bczRLJ gZNruX"
  >
    <input
      disabled=""
      type="radio"
    />
    <span
      class="sc-bczRLJ lnEYAS"
      disabled=""
    />
    Monday
  </label>
</div>
`;

exports[`Radio Component renders lg 1`] = `
<div>
  <label
    class="sc-bczRLJ gPSiSF"
  >
    <input
      type="radio"
    />
    <span
      class="sc-bczRLJ ffCwup"
    />
    Monday
  </label>
</div>
`;
